[package]
name = "minisignal"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
k256 = { version = "0.13.4", features = ["ecdsa"] }
ml-kem = { version = "0.2.1", features = ["std"] }
x25519-dalek = { version = "2.0.1", features = ["getrandom"] }
rand = "0.8.5"
hex = "0.4.3"
rand_core = "0.6.4"
kem = "=0.3.0-pre.0"
